Change how img and keywords display, fix spacing issues

--- a/styles.css
+++ b/styles.css
@@ -186,7 +186,7 @@ article {
   background-color: #00000009;
   display: grid;
   grid-template-columns: auto auto;
-	grid-template-rows: repeat(4, auto);
+	grid-template-rows: auto 1fr auto;
 	grid-template-areas: "headline image" 
                        "abstract image" 
                        "keywords keywords";
@@ -202,7 +202,7 @@ span {
   color: black;
   grid-area: headline;
   text-decoration: none;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 
 .headline-link:hover {
@@ -212,7 +212,8 @@ span {
 .article-img {
   grid-area: image;
   justify-self: flex-end;
-  margin-left: 10px;
+  margin-left: 30px;
+  max-height: 150px;
 }
 
 .article-abstract {
@@ -224,16 +225,16 @@ span {
   display: flex;
   flex-flow: wrap;
   grid-area: keywords;
-  margin-top: 20px;
+  margin-top: 25px;
 }
 
 .keyword {
   background: #00000005;
-  border-radius: 2px;
+  border-radius: 15px;
   border: 1px solid #00000010;
   font-size: 13px;
-  margin: 0 10px 10px 0;
-  padding: 3px;
+  margin: 7px 7px 0 0;
+  padding: 3px 7px;
   transition: all 0.2s ease;
 }
 
